Bug#16764131: Bug#69138: Wasted work in method                          Item_in_subselect::single_value_transformer

Patch that aborts loop when criterion is first met, and removes a redundant
comparison. Based on a community contribution by Po-Chun Chang.